test/should-fail/vsgc984_compile.f3
/*
 * Test invalid escape sequences in a format string.
 *
 * @test/compile-error
 */

var s = "{%tB\udefg%<tY\x new java.util.Date()}";
